# sopel-hackernews

./: Makefile  NEWS  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yml
sopel_hackernews/: __init__.py  formatting.py
