[metadata]
name = sopel-hackernews
version = 0.1.0
description = Hacker News plugin for Sopel.
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/sopel-irc/sopel-hackernews
license = Eiffel Forum License, version 2
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.1,<9
    requests
    # can be rewritten without once we're Sopel 8+ (i.e. Python 3.8+)
    pytz

[options.entry_points]
sopel.plugins =
    hackernews = sopel_hackernews
